sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:2: error: not found: type Breaks
val mybreaks = new Breaks
                   ^AlgBubbleSort3:6: error: not found: value breakable
	breakable {
        ^